# paintconsole

./: CMakeLists.txt  kvadrat.cpp  sinus.cpp  sudoku.cpp
src/: kvadrat.cpp  kvadrat.hpp  main.cpp  matrix.cpp  mymatrix.hpp  sinus.cpp  sinus.hpp  sudoku.cpp  sudoku.hpp
